--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,51 @@
- <div class="user-details">
-  <h1> My Expertise </h1>
-  <p> {{site.user_description}} </p>
+ <div class="avatar">
+   <img src="assets/img/avatar.png" alt="Avatar">
 </div>
-  <div class="user">
-    <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+
+ <div class="user-details">
+  <p>
+  I'm a data analyst in New York, New York.
+  I'm on track to graduate in December with a Bachelor's in Economics from Queens College, I have experties in data analytics, financial forecasting, and cost modeling.
+  I love working with great people, getting creative with data, using state-of-the-art technologies and building awesome products.
+  Interested in working together of having a chat? Feel free to contact ne. </p>
+</div>
+
+<div class="user">
+  <div class="tech">
+    <h2>Analyzing </h2>
+  <div class="icons">
+      <i class="icon fas fa-file-csv"></i>
+      <i class="icon fas fa-microscope"></i>
+      <i class="icon fas fa-chart-bar"></i>
     </div>
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
-      <h2>Tools</h2>
+    <p>
+      I have analyzed structures and unstructured data across diverse fields to extract valuable business insights.
+      I'm passionate about creating visually compelling and insightful visualizations that reveal unexpected patterns.
+    </p>
+  </div>
+
+  <div class="tech">
+    <h2>Developing</h2>
+  <div class="icons">
+      <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-docker-plain"></i>
     </div>
+    <p>
+      I believe that data insights shouldn't remain confined to spreadsheets or notebooks.
+      By leveraging my analytical skills, I have transformed raw data into actionable insights that help drive real business impact.
+    </p>
+  </div>
+  <div class="tech">
+    <h2>Communicating</h2>
+  <div class="icons">
+      <i class="icon fas fa-chalkboard-teacher"></i>
+      <i class="icon fas fa-pencil-alt"></i>
+      <i class="icon fas fa-comments"></i>
+    </div>
+    <p>
+      I enjoy presenting findings, writing reports, and engagin in discussions on a variety of topics.
+      My experience in data analysis helps me explain complex information to non-technical audiences.
+    </p>
+  </div>
 </div>
