--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,36 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
-</div>
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="churn-analysis" src="{{ "/assets/img/customer-churn.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> Customer Churn Analysis </h3>
+    <p>This project focuses on analyzing the key factors behind customer churn, using Python for data analysis and visualization. It identifies the impact of payment methods, contract types, and tenure on customer retention, providing actionable insights for reducing churn rates. </p>
+    <p align="center"><a class="project-link" href="https://github.com/Exagged/Customer-Churn-Analysis">Check it out</a></p>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="coffee-shop-sales" src="{{ "/assets/img/coffee-sales.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-left">
+    <h3>Coffee Shop Sales Dashboard</h3>
+    <p>An interactive Excel dashboard that visualizes coffee shop sales data across various stores. It highlights total sales, top-selling products, and customer purchasing trends. The dashboard helps managers optimize staffing, inventory, and promotional strategies based on peak sales times and product demand. </p>
+    <p align="center"><a class="project-link" href="https://onedrive.live.com/edit?id=51BBF49A32809FA3!s5a3cd9e9e19f486fa8353f48404394df&resid=51BBF49A32809FA3!s5a3cd9e9e19f486fa8353f48404394df&cid=51bbf49a32809fa3&ithint=file%2Cxlsx&redeem=aHR0cHM6Ly8xZHJ2Lm1zL3gvYy81MWJiZjQ5YTMyODA5ZmEzL0VlblpQRnFmNFc5SXFEVV9TRUJEbE44QnVaV1lEZXRxcGwwRHFWaGtlSWVoNmc&migratedtospo=true&wdo=2">Check it out</a></p>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="adidas-sales" src="{{ "/assets/img/adidas-sales.jpg" | prepend: site.baseurl }}"/>
+  </div>
+  <div class="contents-right">
+    <h3>Adidas Sales Report</h3>
+    <p>A comprehensive Power BI dashboard analyzing Adidas' sales performance across the United States. It includes insights into total sales, profit margins, and regional performance, helping stakeholders identify top-performing products and regions for targeted marketing efforts. </p>
+    <p align="center"><a class="project-link" href="https://github.com/Exagged/AdidasSalesReport">Check it out</a></p>
   </div>
 </div>
