--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,17 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
+        <span class="site-title">{{site.user_title}} {{site.username}}</span>
+        <span class="site-description">{{site.user_job_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      </div>
+        <a aria-label="E-Mail" href="mailto:MichaelVSchool@gmail.com"><i class="icon fas fa-envelope"></i></a>
+        <a rel="me" aria-label="Github" target="_blank" href="https://github.com/Exagged"><i class="icon fab fa-github" aria-hidden="true"></i></a>
+        <a rel="me" aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/mkvelazquez"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
+        </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="#about" data-scroll>About</a>
+        ·
         <a class="link" href="#projects" data-scroll>Projects</a>
       </div>
   </div>
