--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -31,3 +31,17 @@
   text-align: center;
   margin: 5px auto;
 }
+
+.avatar {
+  text-align: center;
+  margin: 10px auto;
+   img {
+        max-width: 200px;
+        max-height: 200px;
+        border-radius: 50%;
+    }
+}
+
+.icons {
+  color: $sec;
+}
