--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,6 +6,7 @@ body {
     font-size: 100%;
     line-height: 1.5;
     color: #555;
+    background: $background;
     font-family: 'Montserrat', sans-serif;
 }
 article, aside, figcaption, figure, footer, header, nav, section {
