--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -21,28 +21,36 @@
     margin: 0;
   }
   li {
-    color: $main;
+    color: $sec;
     font-size: 1.1rem;
   }
   p {
     margin-right: 5px;
   }
-}
-
-.contents {
-  @media only screen and (min-width: $cut) {
-    margin-left: 0;
-    width: 48%;
+  a {
+    color: $sec;
   }
 }
 
 .contents-right {
   @media only screen and (min-width: $cut) {
     float: right;
-    margin-top: -5%;
     width: 48%;
+    margin: 0;
+    top: 50%;
   }
 }
+.contents-left {
+  @media only screen and (min-width: $cut) {
+    float: left;
+    margin-top: -5%;
+    width: 48%;
+    margin: 0;
+    top: 50%;
+  }
+}
+
+
 .images-right {
   @media only screen and (min-width: $cut) {
     float: right;
@@ -71,9 +79,9 @@
   display: inline-block;
   margin: 10px 0px;
   padding: 5px;
-  color: $main;
+  color: $sec;
   background-color: transparent;
-  border: 1px solid $main;
+  border: 1px solid $sec;
   border-radius: 10px;
   text-align: center;
   outline: none;
@@ -83,16 +91,16 @@
               background-color 0.3s ease-out,
               border-color 0.3s ease-out;
   &:hover {
-    background-color: $purple;
-    border-color: $purple;
+    background-color: $sec;
+    border-color: $sec;
     color: #fff;
     transition: color 0.3s ease-in,
                 background-color 0.3s ease-in,
                 border-color 0.3s ease-in;
   }
   &:active {
-    background-color: $purple;
-    border-color: $purple;
+    background-color: $sec;
+    border-color: $sec;
     color: #fff;
     transition: color 0.3s ease-in,
                 background-color 0.3s ease-in,
