--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,4 @@
-$main: #1a222c;
-$sec: #4B5664;
-$purple: #54516A;
+$main: linear-gradient(#4b134f, #B24244);
+$sec: #782849;
+$background: #FFF;
 $cut: 550px;
