--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="churn-analysis" src="{{ "/assets/img/customerchurn.png" | prepend: site.baseurl }}" />
+    <img alt="customerchurn" src="{{ "/assets/img/customerchurn.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Customer Churn Analysis </h3>
@@ -15,7 +15,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="coffee-shop-sales" src="{{ "/assets/img/coffeemap.png" | prepend: site.baseurl }}" />
+    <img alt="coffeemap" src="{{ "/assets/img/coffeemap.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-left">
     <h3>Coffee Shop Sales Dashboard</h3>
@@ -26,7 +26,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="adidas-sales" src="{{ "/assets/img/adidas.png" | prepend: site.baseurl }}"/>
+    <img alt="adidas" src="{{ "/assets/img/adidas.png" | prepend: site.baseurl }}"/>
   </div>
   <div class="contents-right">
     <h3>Adidas Sales Report</h3>
