--- a/_includes/about.html
+++ b/_includes/about.html
@@ -41,10 +41,9 @@
   <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
-      <i class="icon fas fa-comments"></i>
     </div>
     <p>
-      I enjoy presenting findings, writing reports, and engagin in discussions on a variety of topics.
+      I enjoy presenting findings, writing reports, and engaging in discussions on a variety of topics.
       My experience in data analysis helps me explain complex information to non-technical audiences.
     </p>
   </div>
