--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
   I'm a data analyst in New York, New York.
   I'm on track to graduate in December with a Bachelor's in Economics from Queens College, I have experties in data analytics, financial forecasting, and cost modeling.
   I love working with great people, getting creative with data, using state-of-the-art technologies and building awesome products.
-  Interested in working together of having a chat? Feel free to contact ne. </p>
+  Interested in working together of having a chat? Feel free to contact me. </p>
 </div>
 
 <div class="user">
